--- a/superagentweb-core/build.gradle
+++ b/superagentweb-core/build.gradle
@@ -24,9 +24,5 @@ android {
 
 dependencies {
     compileOnly fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-    testImplementation 'junit:junit:4.12'
-
-
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-
+    compileOnly 'androidx.appcompat:appcompat:1.1.0'
 }
