--- a/superagentweb-core/src/main/AndroidManifest.xml
+++ b/superagentweb-core/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
             android:theme="@style/SuperAgentWeb_ActivityTranslucent"
             android:windowSoftInputMode="stateHidden|stateAlwaysHidden" />
 
-        <!--  DefaultDownloadImpl DownloadManagerReceiver  -->
-        <receiver android:name="com.siyee.superagentweb.impl.DefaultDownloadImpl$DownloadManagerReceiver">
-            <intent-filter>
-                <!-- 配置 点击通知 和 下载完成 两个 action -->
-                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>
-                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
-            </intent-filter>
-        </receiver>
+<!--        &lt;!&ndash;  DefaultDownloadImpl DownloadManagerReceiver  &ndash;&gt;-->
+<!--        <receiver android:name="com.siyee.superagentweb.impl.DefaultDownloadImpl$DownloadManagerReceiver">-->
+<!--            <intent-filter>-->
+<!--                &lt;!&ndash; 配置 点击通知 和 下载完成 两个 action &ndash;&gt;-->
+<!--                <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED"/>-->
+<!--                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
     </application>
 </manifest>
