chore：add release gradle script

--- a/superagentweb/build.gradle
+++ b/superagentweb/build.gradle
@@ -1,4 +1,8 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+version = "0.0.1"
+group='com.github.hackycy'
 
 android {
     compileSdkVersion 29
@@ -8,7 +12,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0.0"
+        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -19,6 +23,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions { // 消除lint警告
+        abortOnError false
+        checkReleaseBuilds false
     }
 }
 
