--- a/superagentweb/build.gradle
+++ b/superagentweb/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-version = "0.0.1"
+version = "1.0.1-beta.1"
 group='com.github.hackycy'
 
 android {
